<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kapilkhatri.canvasback.UserMessages">
    <item android:id="@+id/action_1" android:title="@string/action_sendtext"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_2" android:title="@string/action_memes"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_3" android:title="@string/action_ragecomics"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_4" android:title="@string/action_gallerypic"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_5" android:title="@string/action_webpic"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>